<resources>
    <string name="app_name">ChatApp Firebase</string>
    <string name="txt_login">Login</string>
    <string name="edt_hint_username">Enter username</string>
    <string name="edt_hint_password">Enter password</string>
    <string name="btn_login">Login</string>
    <string name="txt_register">Click here to register</string>
    <string name="btn_register">Register</string>
    <string name="txt_to_login">Click here to login</string>
    <string name="txt_users">No users found!</string>
    <string name="edt_hint_write_message">Write a message...</string>
</resources>
